[gd_scene load_steps=7 format=3 uid="uid://ew8xqkl7y7k6"]

[ext_resource type="Script" path="res://scripts/TerrainTileMap.gd" id="1_terrain_tilemap"]
[ext_resource type="Script" path="res://scripts/WorldRenderer.gd" id="2_world_renderer"]
[ext_resource type="Script" path="res://scripts/ResourceManager.gd" id="3_resource_manager"]
[ext_resource type="Script" path="res://scripts/EntityManager.gd" id="4_entity_manager"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.2, 0.2, 0.2, 1.0)

[node name="World" type="Node2D"]
script = ExtResource("2_world_renderer")

[node name="TerrainTileMap" type="TileMap" parent="."]
tile_set = null
modulate = Color(1, 1, 1, 1)
script = ExtResource("1_terrain_tilemap")

[node name="Camera2D" type="Camera2D" parent="TerrainTileMap"]
position = Vector2(0, 0)
zoom = Vector2(1, 1)

[node name="ResourceManager" type="Node2D" parent="TerrainTileMap"]
script = ExtResource("3_resource_manager")

[node name="EntityManager" type="Node2D" parent="TerrainTileMap"]
script = ExtResource("4_entity_manager")

[node name="StartupTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StartupTimer" to="." method="_on_timer_timeout"]